# Falcor

./: .gitignore  Dockerfile  dependencies.xml  setup.bat  setup_vs2022.bat
Source/Falcor/Utils/: Dictionary.h
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/AccumulatePass/: AccumulatePass.cpp
Source/RenderPasses/DatasetSaver/: CMakeLists.txt  DatasetSaver.cpp  DatasetSaver.h
Source/RenderPasses/NeuralNoiseReduction/: CMakeLists.txt  Common.cpp  Common.h  Common.slang  NeuralNoiseReduction.cpp  NeuralNoiseReduction.h  Optimizer.cpp  Optimizer.h  ParameterReflecter.cpp  ParameterReflecter.h  RenderContextUtils.cpp  RenderContextUtils.h  RenderingComponent.cpp  RenderingComponent.h  ShaderUtils.cpp  ShaderUtils.h  SimpleKernel.cpp  SimpleKernel.h  SimpleKernel.ps.slang  SubrenderGraph.cpp  SubrenderGraph.h  TextureData.cpp  TextureData.h  TextureReflecter.cpp  TextureReflecter.h
Source/RenderPasses/PathTracer/: PathTracer.slang
Source/RenderPasses/SVGFPass/: CMakeLists.txt  SVGFAtrous.cpp  SVGFAtrous.h  SVGFCommon.cpp  (+44 more)
nnref/: cnnref.py  kpcnn.py  miniblock_transformer.py  oldtesting.py  reftesting.py  tform_test.py  transformer.py
prototyping/: __main__.py  bilateral_filter.py  bilateral_filter.slang  encoder.py  filter.py  fpcnn.py  frame_data.py  kpcnn.py  portable_keyboard.py  sandbox.py  simple_kernel.py
screenshots/: Mogwai.GBufferRaster.guideNormalW.1150.exr  Mogwai.GBufferRaster.linearZ.1150.exr  Mogwai.GBufferRaster.mvec.1150.exr  Mogwai.GBufferRaster.pnFwidth.1150.exr  Mogwai.GBufferRaster.posW.1150.exr
scripts/: DenoisedPathTracer.py
(+19 files in other folders)
